fixed text-align on stars/separators in text blocks (rendering issues on chrome)

--- a/_sass/components/_elements.scss
+++ b/_sass/components/_elements.scss
@@ -242,6 +242,7 @@ div.script {
 
 p.stars {
 	text-align: center;
+	text-align-last: center;
 }
 
 // bourbon refills accordion tabs
